Fix nav menu on mobile

--- a/app/layout.css
+++ b/app/layout.css
@@ -158,8 +158,7 @@ nav {
 			transition: transform 0.1s ease-in-out;
 		}
 	}
-	nav:focus-within,
-	nav:has(:active) {
+	nav:focus-within {
 		ul {
 			left: -20%;
 			box-shadow: 0 0 2rem rgba(0, 0, 0, 0.3);
